infrastructure/k8s/auth-cache-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-cache-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-cache
  template:
    metadata:
      labels:
        app: auth-cache
    spec:
      containers:
        - name: auth-cache
          image: redis
---
apiVersion: v1
kind: Service
metadata:
  name: auth-cache-srv
spec:
  selector:
    app: auth-cache
  ports:
    - name: cache
      protocol: TCP
      port: 6379
      targetPort: 6379
