infrastructure/k8s/auth-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-db-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-db
  template:
    metadata:
      labels:
        app: auth-db
    spec:
      containers:
        - name: auth-db
          image: postgres
          imagePullPolicy: "IfNotPresent"
---
apiVersion: v1
kind: Service
metadata:
  name: auth-db-srv
spec:
  selector:
    app: auth-db
  ports:
    - name: db
      protocol: TCP
      port: 5432
      targetPort: 5432
